--- a/pom.xml
+++ b/pom.xml
@@ -46,19 +46,76 @@
 		<artifactId>jackson-databind</artifactId>
 		<version>2.6.4</version>
 	</dependency>
-	
+	<dependency>
+		<groupId>mysql</groupId>
+	    <artifactId>mysql-connector-java</artifactId>
+	    <version>5.1.32</version>
+	</dependency>
 	<dependency>
 	    <groupId>org.springframework.data</groupId>
 	    <artifactId>spring-data-jpa</artifactId>
 	    <version>1.9.4.RELEASE</version>
+	    <exclusions>
+	    	<exclusion>
+	    		<groupId>org.slf4j</groupId>
+        		<artifactId>slf4j-api</artifactId>
+	    	</exclusion>
+	    	<exclusion>
+	    		<groupId>org.slf4j</groupId>
+	    		<artifactId>jcl-over-slf4j</artifactId>
+	    	</exclusion>
+	    </exclusions>
 	</dependency>
 	
+	<dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-core</artifactId>
+        <version>4.3.11.Final</version>
+      </dependency>
 	<dependency>
 		<groupId>org.hibernate.javax.persistence</groupId>
 		<artifactId>hibernate-jpa-2.1-api</artifactId>
 		<version>1.0.0.Final</version>
 	</dependency>
-	
+    <dependency>
+    	<groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>1.7.21</version>
+    </dependency>
+    <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-log4j12</artifactId>
+        <version>1.7.21</version>
+      </dependency>
+	<!-- 
+	<dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-classic</artifactId>
+        <version>1.1.7</version>
+      </dependency>
+      <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-core</artifactId>
+        <version>1.1.7</version>
+      </dependency>
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>jul-to-slf4j</artifactId>
+        <version>1.7.21</version>
+      </dependency>
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>log4j-over-slf4j</artifactId>
+        <version>1.7.21</version>
+      </dependency>
+       -->
+      <!-- 
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>jcl-over-slf4j</artifactId>
+        <version>1.7.21</version>
+      </dependency>
+       -->
   </dependencies>
   
   <build>
