--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,12 @@
         <groupId>org.hibernate</groupId>
         <artifactId>hibernate-core</artifactId>
         <version>4.3.11.Final</version>
-      </dependency>
+    </dependency>
+    <dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-entitymanager</artifactId>
+        <version>4.3.11.Final</version>
+    </dependency>
 	<dependency>
 		<groupId>org.hibernate.javax.persistence</groupId>
 		<artifactId>hibernate-jpa-2.1-api</artifactId>
