--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,11 @@
         <version>1.7.21</version>
       </dependency>
        -->
+       <dependency>
+		  <groupId>org.mybatis</groupId>
+		  <artifactId>mybatis</artifactId>
+		  <version>3.4.0</version>
+		</dependency>
   </dependencies>
   
   <build>
